# Tetris_Multiplayer-IN204_projet

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  requirements.txt  vcpkg.json
docs/: SETUP_SDL2_vcpkg.md  architecture.md  class_responsibilities.md  course_alignment.md  functional_specs.md  use_cases.md
include/controller/: GameController.hpp  InputAction.hpp
include/core/: Board.hpp  GameState.hpp  IMatchRules.hpp  LevelManager.hpp  MatchRules.hpp  ScoreManager.hpp  Tetromino.hpp  TetrominoFactory.hpp  Types.hpp
include/gui/: BoardPanel.hpp  ColorTheme.hpp  MultiplayerConfigDialog.hpp  MultiplayerFrame.hpp  NextPiecePanel.hpp  RemoteBoardPanel.hpp  StartFrame.hpp  TetrisApp.hpp  TetrisFrame.hpp
include/gui_sdl/: Application.hpp  LobbyScreen.hpp  MultiplayerConfigScreen.hpp  MultiplayerGameScreen.hpp  Screen.hpp  SinglePlayerScreen.hpp  StartScreen.hpp
include/network/: HostGameSession.hpp  HostLoop.hpp  INetworkSession.hpp  MessageTypes.hpp  MultiplayerConfig.hpp  NetworkClient.hpp  NetworkHost.hpp  Serialization.hpp  StateUpdateMapper.hpp  TcpServer.hpp  TcpSession.hpp
src/: console_multiplayer_demo.cpp  main_console.cpp  net_demo_old.cpp  network_tcp_demo.cpp
src/controller/: GameController.cpp
src/core/: Board.cpp  GameState.cpp  LevelManager.cpp  ScoreManager.cpp  SharedTurnRules.cpp  Tetromino.cpp  TetrominoFactory.cpp  TimeAttackRules.cpp
src/gui/: BoardPanel.cpp  MultiplayerConfigDialog.cpp  MultiplayerFrame.cpp  NextPiecePanel.cpp  RemoteBoardPanel.cpp  StartFrame.cpp  TetrisApp.cpp  TetrisFrame.cpp
src/gui_sdl/: Application.cpp  LobbyScreen.cpp  MultiplayerConfigScreen.cpp  MultiplayerGameScreen.cpp  SinglePlayerScreen.cpp  StartScreen.cpp  main_sdl.cpp
src/gui_sdl/imgui_backends/: imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h
src/network/: HostGameSession.cpp  HostLoop.cpp  NetworkClient.cpp  NetworkHost.cpp  Serialization.cpp  StateUpdateMapper.cpp  TcpServer.cpp  TcpSession.cpp
tests/: CMakeLists.txt  FakeNetworkSession.hpp  test_board.cpp  test_controller.cpp  test_game_state.cpp  test_gameplay_core.cpp  test_host_game_session.cpp  test_multiplayer_modes.cpp  test_network.cpp  test_network_client.cpp  test_network_host.cpp  test_network_level0.cpp  test_network_serialization.cpp  test_score.cpp  test_scoring_and_lines.cpp  test_shared_turn_rules.cpp  test_state_update_mapper.cpp  test_time_attack_rules.cpp
